--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,10 @@
         android:name="com.example.gardenkeeper.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_recordatorios"
+        android:name="com.example.gardenkeeper.ui.recordatorios.RecordatoriosFragment"
+        android:label="Recordatorios"
+        tools:layout="@layout/fragment_recordatorios" />
 </navigation>
