--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,5 +20,9 @@
             android:id="@+id/nav_recordatorios"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="recordatorios" />
+        <item
+            android:id="@+id/nav_plant_profile"
+            android:icon="@drawable/ic_plant_profile_black"
+            android:title="Perfil de Planta" />
     </group>
 </menu>
