--- a/app/src/main/res/layout/fragment_web.xml
+++ b/app/src/main/res/layout/fragment_web.xml
@@ -8,41 +8,23 @@
 
     <WebView
         android:id="@+id/webView"
-        android:layout_width="411dp"
-        android:layout_height="598dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:background="#13DB1B"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="390dp"
-        android:layout_height="55dp"
-        android:background="#FFFFFF"
-        android:gravity="start|center_vertical"
-        android:paddingStart="70dp"
-        android:textColor="#000000"
-        android:layout_marginTop="20dp"
-        android:elevation="1"
-        android:text="Search URL web"
-        android:drawableEnd="@drawable/baseline_mic_24"
-        android:drawablePadding="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toBottomOf="@id/searchView" />
 
     <SearchView
         android:id="@+id/searchView"
-        android:layout_width="369dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="8dp"
-        android:elevation="2"
-        app:layout_constraintEnd_toEndOf="@id/button3"
-        app:layout_constraintStart_toStartOf="@id/button3"
-        app:layout_constraintTop_toTopOf="@id/button3" />
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:drawableEnd="@drawable/baseline_mic_24"
+        android:iconifiedByDefault="false"
+        android:padding="10dp"
+        android:queryHint="Search URL"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
