--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -29,7 +29,25 @@
         tools:layout="@layout/fragment_recordatorios" />
     <fragment
         android:id="@+id/nav_plant_profile"
-        android:name="com.example.gardenkeeper.ui.plantprofile.Plantprofilefragment"
-        tools:layout="@layout/fragment_plant_profile" />
+        android:name="com.example.gardenKeeper.ui.plantprofile.PlantProfileFragment"
+        android:label="Perfiles de Plantas"
+        tools:layout="@layout/fragment_plant_profiles">
+        <action
+            android:id="@+id/action_menu_to_plantProfileFragment"
+            app:destination="@id/nav_plant_profile"/>
+    </fragment>
+
+        <!-- Fragmento para agregar una nueva planta -->
+    <fragment
+        android:id="@+id/addPlantFragment"
+        android:name="com.example.gardenKeeper.ui.plantprofile.AddPlantFragment">
+        <action
+            android:id="@+id/action_addPlantFragment_to_plantProfileFragment"
+            app:destination="@id/plantProfileFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/plantProfileFragment"
+        android:name="com.example.gardenKeeper.ui.plantprofile.PlantProfileFragment" />
 
 </navigation>
