se ordena el menu, se cambian los iconos y se elimina el fragmento del slideshow.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,8 +6,12 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_menu_home"
             android:title="@string/menu_home" />
+        <item
+            android:id="@+id/nav_plant_profile"
+            android:icon="@drawable/ic_plant_profile_black"
+            android:title="Perfil de Planta" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
@@ -17,20 +21,14 @@
             android:icon="@drawable/ic_menu_videos"
             android:title="Videos" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
-        <item
-            android:id="@+id/nav_recordatorios"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="recordatorios" />
-        <item
-            android:id="@+id/nav_plant_profile"
-            android:icon="@drawable/ic_plant_profile_black"
-            android:title="Perfil de Planta" />
-        <item
             android:id="@+id/nav_web"
             android:icon="@mipmap/ic_web_foreground"
             android:title="Web" />
+        <item
+            android:id="@+id/nav_recordatorios"
+            android:icon="@drawable/ic_menu_calendar"
+            android:title="recordatorios" />
+
+
     </group>
 </menu>
